# backend

./: .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.py  ARQUITETURA.md  DATA_FLOW_EXAMPLE.py  LINTING.md  PATTERNS.py  TESTES.md  TIPAGEM.md  arquitetura_backend.drawio.html
src/: __init__.py  config.py  main.py
src/adapters/database/: __init__.py  connection.py  gtfs_connection.py  mappers.py  models.py
src/adapters/repositories/: gtfs_repository_adapter.py  history_repository_adapter.py  trip_repository_adapter.py  user_repository_adapter.py
src/adapters/security/: hashing.py  jwt.py
src/core/: __init__.py
src/core/models/: __init__.py  bus.py  coordinate.py  route_shape.py  trip.py  user.py  user_history.py
src/core/ports/: __init__.py  bus_provider_port.py  gtfs_repository.py  history_repository.py  password_hasher.py  trip_repository.py  user_repository.py
src/core/services/: __init__.py  history_service.py  route_service.py  score_service.py  trip_service.py  user_service.py
src/web/: __init__.py  auth.py  mappers.py  schemas.py
src/web/controllers/: __init__.py  history_controller.py  rank_controller.py  route_controller.py  trip_controller.py  user_controller.py
tests/adapters/: test_gtfs_repository_adapter.py  test_sptrans_adapter.py  test_trip_repository_adapter.py  test_user_history_repository_adapter.py  test_user_repository_adapter.py
tests/core/: test_history_service.py  test_route_service.py  test_score_service.py  test_trip_service_basic.py  test_trip_service_example.py  test_user_service.py
tests/integration/: __init__.py  conftest.py  test_bus_position.py  test_login.py  test_ranking.py  test_route.py  test_trip.py  test_user_history.py
tests/web/: test_route_controller.py  test_user_controller.py
