[project]
name = "bussp"
version = "1.0.0"
description = "Gamified public transport tracking system with Hexagonal Architecture"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.109.0",
	"uvicorn[standard]>=0.27.0",
	"pydantic>=2.5.0",
	"pydantic-settings>=2.1.0",
	"sqlalchemy[asyncio]>=2.0.25",
	"aiosqlite>=0.19.0",
	"httpx>=0.26.0",
	"python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-asyncio>=0.23.0",
	"pytest-cov>=4.1.0",
	"mypy>=1.8.0",
	"ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]
exclude = ["^\\.venv/", "^build/", "^dist/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"W",   # pycodestyle warnings
	"F",   # pyflakes
	"I",   # isort
	"B",   # flake8-bugbear
	"C4",  # flake8-comprehensions
	"UP",  # pyupgrade
	"N",   # pep8-naming
	"SIM", # flake8-simplify
]
ignore = [
	"E501", # line too long (handled by formatter)
	"B008", # do not perform function calls in argument defaults (false positive for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
